<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="24dp">

    <!-- Заголовок -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_email_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <Space android:layout_width="match_parent" android:layout_height="32dp" />

    <!-- Новый Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_email_hint"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/grey_3"
        app:hintTextColor="@color/grey_3"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space android:layout_width="match_parent" android:layout_height="16dp" />

    <!-- Подтверждение паролем -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm_hint"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/grey_3"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/grey_3"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space android:layout_width="match_parent" android:layout_height="32dp" />

    <!-- Кнопка сохранения -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSaveEmail"
        style="@style/PrimaryButton"
        android:text="@string/save_changes" />

</LinearLayout>