<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chats_background_gradient"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </RelativeLayout>

    <Space android:layout_width="match_parent" android:layout_height="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/surface_color"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMessages"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/notif_messages"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey_3" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchCalls"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/notif_calls"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey_3" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchVibration"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/vibration"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>